--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,11 @@
             <artifactId>richfaces-components-ui</artifactId>
             <version>4.3.1.Final</version>
         </dependency>
+        <dependency>
+            <groupId>java3d</groupId>
+            <artifactId>vecmath</artifactId>
+            <version>1.3.1</version>
+        </dependency>
     </dependencies>
 
     <build>        
