--- a/pom.xml
+++ b/pom.xml
@@ -26,11 +26,11 @@
             <artifactId>jdbc-stdext</artifactId>
             <version>2.0</version>
         </dependency-->
-        <dependency>
+        <!--dependency>
             <groupId>javax.transaction</groupId>
             <artifactId>jta</artifactId>
             <version>1.1</version>
-        </dependency>
+        </dependency-->
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
@@ -72,16 +72,16 @@
             <artifactId>hibernate-core</artifactId>
             <version>4.2.2.Final</version>
         </dependency>            
-        <dependency>
+        <!--dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-entitymanager</artifactId>
             <version>3.3.2.GA</version>
-        </dependency>
-        <dependency>
+        </dependency-->
+        <!--dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-c3p0</artifactId>
             <version>4.2.2.Final</version>
-        </dependency>       
+        </dependency-->       
     </dependencies>
 
     <build>        
