LDAP Authentication implemented & adding fields form LDAP

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -40,20 +40,20 @@
             5
         </session-timeout>
     </session-config>
-    <login-config>
+    <!--login-config>
         <auth-method>BASIC</auth-method>
         <realm-name>LDAP</realm-name>
     </login-config> 
     <security-role>
         <role-name>role1</role-name>
-    </security-role>
-    <security-constraint>
+    </security-role-->
+    <!--security-constraint-->
       <!-- web resources that are protected -->
-      <web-resource-collection>
+      <!--web-resource-collection>
          <web-resource-name>All Resources</web-resource-name>
-         <url-pattern>/*</url-pattern>
+         <url-pattern>/*</url-pattern-->
          <!-- All methods but OPTIONS must be authenticated. OPTIONS must work without authentication for cross domain in Firefox to work -->
-         <http-method>GETLIB</http-method>
+         <!--http-method>GETLIB</http-method>
          <http-method>COPY</http-method>
          <http-method>MOVE</http-method>
          <http-method>DELETE</http-method>
@@ -73,12 +73,9 @@
          <http-method>UPDATE</http-method>
          <http-method>CANCELUPLOAD</http-method>
       </web-resource-collection>
-      <auth-constraint>
+      <auth-constraint-->
           <!-- role-name indicates roles that are allowed to access the web resource specified above -->
-          <role-name>role1</role-name>
+          <!--role-name>role1</role-name>
       </auth-constraint>
-   </security-constraint> 
-    
-    
-    
+   </security-constraint-->     
 </web-app>
