Implementing encrypted UID LDAP Authentication

--- a/src/main/webapp/resources/conf/ldap.properties
+++ b/src/main/webapp/resources/conf/ldap.properties
@@ -1,6 +1,6 @@
 host=10.129.129.148
 port=389
-cn=Admin
-password=admin
-dcs=abacus cediant es
+cn=cediant UAX
+password=cediant
 group=Users
+dcs=abacus cediant es
