--- a/pom.xml
+++ b/pom.xml
@@ -82,7 +82,7 @@
             <artifactId>shared-ldap-model</artifactId>
             <version>1.0.0-M13</version>
         </dependency>
-        <dependency>
+        <!--dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-core</artifactId>
             <version>3.1.4.RELEASE</version>
@@ -126,7 +126,7 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-beans</artifactId>
             <version>3.2.3.RELEASE</version>
-        </dependency>
+        </dependency-->
         <dependency>
             <groupId>com.novell.ldap</groupId>
             <artifactId>jldap</artifactId>
