--- a/pom.xml
+++ b/pom.xml
@@ -132,6 +132,11 @@
             <artifactId>jldap</artifactId>
             <version>2009-10-07</version> 
         </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-c3p0</artifactId>
+            <version>4.2.5.Final</version>
+        </dependency>
     </dependencies>
 
     <build>        
