--- a/pom.xml
+++ b/pom.xml
@@ -80,12 +80,12 @@
         <dependency>
             <groupId>org.richfaces.core</groupId>
             <artifactId>richfaces-core-impl</artifactId>
-            <version>4.3.1.Final</version>
+            <version>4.3.3.Final</version>
         </dependency>  
         <dependency>
             <groupId>org.richfaces.ui</groupId>
             <artifactId>richfaces-components-ui</artifactId>
-            <version>4.3.1.Final</version>
+            <version>4.3.3.Final</version>
         </dependency>
         <dependency>
             <groupId>java3d</groupId>
@@ -192,6 +192,11 @@
             <artifactId>logback-classic</artifactId>
             <version>1.0.13</version>
         </dependency-->
+        <dependency>
+            <groupId>org.primefaces</groupId>
+            <artifactId>primefaces</artifactId>
+            <version>4.0</version>
+        </dependency>
     </dependencies>
 
     <build>        
@@ -258,6 +263,12 @@
             <id>jvnet-nexus-snapshots</id>
             <name>jvnet-nexus-snapshots</name>
             <url>https://maven.java.net/content/repositories/snapshots/</url>
+        </repository>
+        <repository>
+            <id>prime-repo</id>
+            <name>PrimeFaces Maven Repository</name>
+            <url>http://repository.primefaces.org</url>
+            <layout>default</layout>
         </repository>
     </repositories>
 </project>
