--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -12,7 +12,15 @@
     <context-param>
         <param-name>org.richfaces.push.jms.enabled</param-name>
         <param-value>true</param-value>
+    </context-param>    
+    <context-param>
+        <param-name>org.richfaces.fileUpload.maxRequestSize</param-name>
+        <param-value>10000000</param-value>
     </context-param>
+    <context-param>
+        <param-name>org.richfaces.fileUpload.createTempFiles</param-name>
+        <param-value>false</param-value>
+    </context-param>                
     <!-- Welcome page list -->
     <welcome-file-list>
         <welcome-file>index.xhtml</welcome-file>
